# bashasuraksha

./: .gitignore  README.md
.github/workflows/: ci.yml
frontend/: check_coordinates.mjs  check_db_columns.mjs  docker-compose.yml  next.config.mjs  package-lock.json  package.json  verify_lat_lng.mjs
frontend/actions/: bhasha.js
frontend/prisma/: schema.prisma
frontend/src/actions/: bhasha.js
frontend/src/app/: layout.js  page.jsx
frontend/src/components/: mini-navbar.jsx  stars.jsx
frontend/src/lib/: prisma.js
ml/: .dockerignore  Dockerfile  requirements.txt
ml/app/: main.py
ml/app/modles/: indiawav2vec.py  whisper.py  xlsr.py
ml/app/routers/: embeddings.py  health.py  process.py
ml/app/serivices/: audio_processor.py  clusturing.py  embeddings.py  extract_keywords.py  preprocess.py  whisper_utils.py
ml/app/services/: audio_processor.py  clustering.py  db_clusters.py  db_embeddings.py  embeddings.py  preprocess.py  whisper_utils.py
ml/app/test/: test_embeddings.py  test_preprocess.py  test_processor.py  test_whisper.py
ml/app/tests/: test_embeddings.py  test_preprocess.py  test_processor.py  test_whisper.py
ml/app/utils/: blob_utils.py  db.py  (+3 more)
ml_v2/: data_structure.txt
ml_v2/encoder/: main.py  pyproject.toml
ml_v2/encoder/services/: generate_embeddings.py  preprocess_audio.py
ml_v2/orchastrater/: main.py  pyproject.toml  test_audio.txt  test_driver.py
ml_v2/orchastrater/services/: clustering.py  db_clusters.py  db_embeddings.py  remote_encoder.py  supabase.py  whisper_utils.py
ml_v2/orchastrater/utils/: db.py  env.py  logger.py
(+20 files in other folders)
