[project]
name = "encoder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "librosa>=0.11.0",
    "python-multipart>=0.0.21",
    "torch>=2.9.1",
    "transformers>=4.57.5",
    "uvicorn>=0.40.0",
]
